--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ perl:
   - "5.16"
   - "5.14"
   - "5.12"
+  - "5.10"
+  # - "5.8"	# cover doesn't work with this version
 
 before_install:
   cpanm -n Devel::Cover::Report::Coveralls Test::Pod::Spelling::CommonMistakes Test::Portability::Files
